erDiagram
    users ||--o{ folder_tags : owns
    users ||--o{ folders : owns
    folder_tags o|--o{ folders : classifies
    users ||--o{ tasks : owns
    folders o|--o{ tasks : contains
    notes o|--o{ tasks : sources
    users ||--o{ sessions : runs
    users ||--o{ notes : owns
    users ||--o{ task_organizer_runs : owns
    notes ||--o{ task_organizer_runs : records
    folders o|--o{ notes : contextualizes
    sessions o|--o{ notes : contextualizes
    sessions ||--|{ session_tasks : contains
    tasks ||--o{ session_tasks : focuses
    places ||--o{ sessions : hosts
    group_rooms o|--o{ sessions : groups
    places ||--o{ group_rooms : hosts
    group_rooms ||--o{ group_participants : includes
    users ||--o{ group_participants : joins
    tasks o|--o{ group_participants : targets
    cities ||--o{ places : contains
    users ||--o{ knowledge_node : owns
    folders ||--o{ knowledge_source : collects
    knowledge_node ||--o| knowledge_source : details
    knowledge_node ||--o{ knowledge_branch : "parents (structure)"
    knowledge_node ||--o{ knowledge_relation : "connects (meaning)"

    users {
    agent_sessions o|--o{ agent_work_items : "shared by work items"
    agent_sessions ||--o{ agent_session_events : records

    agent_work_items {
        bigint id PK
        bigint user_id "Swimming FK 없음"
        varchar resource_type "SWIMMING_TASK"
        varchar resource_id "사용자·타입·리소스 복합 UK, Swimming FK 없음"
        bigint agent_session_id FK "nullable, 시작 전에는 세션 없음"
        timestamp created_at
        timestamp updated_at
    }

    agent_sessions {
        bigint id PK
        bigint user_id "Swimming FK 없음"
        varchar agent_type
        varchar status "WORKING | WAITING | COMPLETED | FAILED | UNKNOWN"
        varchar status_source "MCP_REPORT"
        varchar instruction "nullable"
        jsonb progress_snapshot "nullable"
        jsonb result_snapshot "nullable"
        jsonb error_snapshot "nullable"
        timestamp started_at
        timestamp last_seen_at
        timestamp completed_at "nullable"
        timestamp created_at
        timestamp updated_at
    }

    agent_session_events {
        bigint id PK
        bigint agent_session_id FK
        varchar agent_type "기록 당시 Agent"
        varchar event_type
        jsonb payload
        varchar source
        timestamp created_at
        timestamp updated_at
    }

    agent_access_tokens {
        bigint id PK
        bigint user_id "Swimming FK 없음"
        varchar name
        varchar token_prefix "표시용 앞부분"
        varchar token_suffix "표시용 끝 6자"
        varchar token_hash UK "SHA-256, 원문은 저장하지 않음"
        varchar scopes "agent-work:read,agent-work:write"
        timestamp expires_at "nullable, 없으면 만료 없음"
        timestamp last_used_at "nullable"
        timestamp revoked_at "nullable"
        timestamp created_at
        timestamp updated_at
    }
        bigint id PK
        varchar email UK
        varchar google_subject UK
        varchar nickname
        varchar timezone
        timestamp created_at
        timestamp updated_at
    }

    folder_tags {
        bigint id PK
        bigint user_id FK
        varchar name
        timestamp created_at
        timestamp updated_at
    }

    folders {
        bigint id PK
        bigint user_id FK
        bigint folder_tag_id FK "nullable"
        varchar name
        text description
        date target_date "nullable"
        varchar status
        boolean is_deleted
        boolean has_source "링크가 있으면 폴더 삭제를 막는다. 링크 도메인이 갱신한다"
        timestamp pinned_at "nullable. 값이 있으면 고정한 폴더이고 목록 최상단에 온다"
        timestamp created_at
        timestamp updated_at
    }

    tasks {
        bigint id PK
        bigint user_id FK
        bigint folder_id FK "nullable"
        bigint source_note_id FK "nullable"
        varchar title
        varchar status
        boolean is_priority "기본 false"
        boolean is_urgent "기본 false"
        int order_idx
        bigint matrix_rank "Matrix 영역 내 순서"
        date plan_date "nullable, 캘린더 날짜(한 task는 최대 하나)"
        boolean is_deleted
        timestamp created_at
        timestamp updated_at
    }

    sessions {
        bigint id PK
        bigint user_id FK
        bigint active_user_id UK "nullable while ended"
        varchar type
        bigint place_id FK
        bigint group_room_id FK "nullable"
        varchar music_url "nullable; latest URL for this session"
        int planned_duration_sec
        int focus_duration_sec "집중 페이즈 초"
        int break_duration_sec "휴식 페이즈 초"
        int repeat_count "반복 횟수"
        int actual_duration_sec "nullable"
        timestamp started_at
        timestamp end_at "nullable"
        varchar status
        varchar summary "nullable; 세션 기록 한 줄 메모"
        timestamp created_at
        timestamp updated_at
    }

    session_tasks {
        bigint session_id PK,FK
        bigint task_id PK,FK
        boolean is_completed "기본 false; 완료 시 true"
        timestamp created_at
        timestamp updated_at
    }

    notes {
        bigint id PK
        bigint user_id FK
        varchar(1024) content
        varchar status
        boolean is_deleted
        varchar context_type
        bigint folder_id FK "nullable"
        bigint session_id FK "nullable"
        timestamp created_at
        timestamp updated_at
    }

    task_organizer_runs {
        bigint id PK
        bigint user_id FK
        bigint note_id FK
        varchar status "PREVIEWED | CONFIRMED"
        jsonb input_snapshot "메모와 Folder·Task 입력 스냅샷"
        jsonb preview_snapshot "AI 제안과 itemId"
        jsonb feedback_snapshot "승인·제외 및 최종 수정값, nullable"
        jsonb llm_calls "단계별 모델·프롬프트 해시·토큰·지연"
        timestamp created_at
        timestamp updated_at
    }

    group_rooms {
        bigint id PK
        bigint place_id FK
        timestamp started_at
        int duration_sec
        int capacity
        varchar host_type
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    group_participants {
        bigint id PK
        bigint group_room_id FK
        bigint user_id FK
        bigint task_id FK "nullable"
        varchar ad_hoc_goal "nullable"
        timestamp joined_at
        timestamp created_at
        timestamp updated_at
    }

    cities {
        bigint id PK
        varchar name
        varchar country_code
        varchar timezone
        timestamp created_at
        timestamp updated_at
    }

    places {
        bigint id PK
        bigint city_id FK
        varchar name
        varchar background_asset_type
        varchar background_asset_key
        varchar thumbnail_asset_key "nullable"
        varchar default_music_url "nullable"
        timestamp created_at
        timestamp updated_at
    }

    knowledge_node {
        uuid id PK "애플리케이션 채번"
        bigint user_id FK
        varchar node_type "SOURCE | SUBJECT | TOPIC"
        varchar title
        varchar normalized_title "표기 차이 제거. SUBJECT 중복 방지 UK (is_deleted=false 한정)"
        text description "nullable"
        vector title_embedding "nullable, SUBJECT title의 text-embedding-3-small 768차원"
        varchar title_embedding_model "nullable, SUBJECT일 때 embedding과 함께 저장"
        boolean is_deleted "soft delete. 관계는 남기고 조회에서만 뺀다"
        timestamp created_at
        timestamp updated_at
    }

    knowledge_source {
        uuid node_id PK, FK
        bigint folder_id FK
        varchar title
        text url
        text canonical_url
        text content "nullable"
        text summary "nullable"
        vector summary_embedding "nullable, text-embedding-3-small 768차원"
        varchar summary_embedding_model "nullable"
        varchar source_type "nullable"
        varchar author "nullable"
        timestamp published_at "nullable"
        varchar processing_status "PENDING | PROCESSING | COMPLETED | FAILED"
        integer analysis_version "nullable"
        varchar failure_message "nullable, 사용자용 실패 안내"
        boolean retryable "재시도 가능 여부"
        timestamp read_at "nullable, 읽은 시각"
        timestamp created_at
        timestamp updated_at
    }

    knowledge_branch {
        bigint id PK
        uuid parent_node_id FK
        uuid child_node_id FK
        integer position
        timestamp created_at
        timestamp updated_at
    }

    knowledge_relation {
        bigint id PK
        uuid from_node_id FK
        uuid to_node_id FK
        varchar relation_type "ABOUT | SUPPORTS | INVOLVES"
        varchar origin "AI | USER | SYSTEM"
        double confidence "nullable"
        jsonb evidence "nullable"
        timestamp created_at
        timestamp updated_at
    }
